automate computation of all deflations for both H7 and H8

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -1,4 +1,15 @@
 
+depths = 0 1 2 3 4 5 6
+deflated_suf = $(depths:%=H7_%) $(depths:%=H8_%)
 
-einstein_H8_d4.png: einstein.pov shapes.inc subdivision.inc
-	povray +a $< Declare=htile=8 Declare=depth=4 -D +O$@
+deflated_png_H7 = $(depths:%=einstein_H7_d%.png)
+deflated_png_H8 = $(depths:%=einstein_H8_d%.png)
+
+all:$(deflated_png_H7) $(deflated_png_H8)
+
+$(deflated_png_H7):einstein_H7_d%.png: einstein.pov shapes.inc subdivision.inc
+	povray +a -D $< Declare=htile=7 Declare=depth=$* +O$@
+
+$(deflated_png_H8):einstein_H8_d%.png: einstein.pov shapes.inc subdivision.inc
+	povray +a -D $< Declare=htile=8 Declare=depth=$* +O$@
+
