--- a/povray/Makefile
+++ b/povray/Makefile
@@ -22,7 +22,7 @@ frames/subdivision: frames
 	mkdir frames/subdivision
 
 frames/subdivision/subdivision0000.png: subdivision.pov frames/subdivision
-	povray +a subdivision.pov Declare=AspectWide=1 +W1280 +H720 +ki0 +kf2 +kfi0 +kff1000 +Oframes/subdivision/
+	povray -D +a subdivision.pov Declare=AspectWide=1 +W1280 +H720 +ki0 +kf2 +kfi0 +kff1000 +Oframes/subdivision/
 
 subdivision.mp4: frames/subdivision/subdivision0000.png
 	ffmpeg -framerate 25 -pattern_type glob -i 'frames/subdivision/subdivision????.png' -c:v libx264 -pix_fmt yuv420p $@
