Permetti di creare la suddivisione a livelli superiori

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -16,14 +16,20 @@ $(deflated_png_H8):einstein_H8_d%.png: einstein.pov shapes.inc subdivision.inc
 subdivision_frames: frames/subdivision/subdivision0000.png
 
 frames:
-	mkdir frames
+	mkdir $@
 
-frames/subdivision: frames
-	mkdir frames/subdivision
+frames/subdivision%: frames
+	mkdir $@
 
 frames/subdivision/subdivision0000.png: subdivision.pov frames/subdivision
 	povray -D +a subdivision.pov Declare=AspectWide=1 +W1280 +H720 +ki0 +kf2 +kfi0 +kff1000 +Oframes/subdivision/
 
+frames/subdivision_d1/subdivision0000.png: subdivision.pov frames/subdivision_d1
+	povray -D +a subdivision.pov Declare=AspectWide=1 Declare=depth=1 +W1280 +H720 +ki0 +kf2 +kfi0 +kff1000 +Oframes/subdivision_d1/
+
 subdivision.mp4: frames/subdivision/subdivision0000.png
 	ffmpeg -framerate 25 -pattern_type glob -i 'frames/subdivision/subdivision????.png' -c:v libx264 -pix_fmt yuv420p $@
+
+subdivision%.mp4: frames/subdivision%/subdivision0000.png
+	ffmpeg -framerate 25 -pattern_type glob -i 'frames/subdivision$*/subdivision????.png' -c:v libx264 -pix_fmt yuv420p $@
 
