Sistemazioni e incollamento degli mp4

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -27,6 +27,10 @@ $(dirs):frames/subdivision_d%: frames
 $(frames000):frames/subdivision_d%/subdivision000.png: subdivision.pov frames/subdivision_d%
 	povray -D +a subdivision.pov Declare=AspectWide=1 Declare=depth=$* +W1280 +H720 +ki0 +kf2 +kfi0 +kff500 +Oframes/subdivision_d$*/
 
-subdivision%.mp4: frames/subdivision%/subdivision000.png
-	ffmpeg -framerate 25 -pattern_type glob -i 'frames/subdivision$*/subdivision???.png' -c:v libx264 -pix_fmt yuv420p $@
+subdivision_d%.mp4: frames/subdivision_d%/subdivision000.png
+	ffmpeg -framerate 25 -pattern_type glob -i 'frames/subdivision_d$*/subdivision???.png' -c:v libx264 -pix_fmt yuv420p $@
 
+subdepths = 0 1 2 3 4
+
+#subdivision.mp4: $(subdepths:%=subdivision_d%.mp4)
+#	ffmpeg -f concat -safe 0 -i subdivisionlist.txt -c copy subdivision.mp4
