--- a/povray/Makefile
+++ b/povray/Makefile
@@ -13,7 +13,7 @@ $(deflated_png_H7):einstein_H7_d%.png: einstein.pov shapes.inc subdivision.inc
 $(deflated_png_H8):einstein_H8_d%.png: einstein.pov shapes.inc subdivision.inc
 	povray +a -D $< Declare=htile=8 Declare=depth=$* +O$@
 
-mp4list=five_deflations five_deflations_ws yellow_brick_road yellow_brick_road_aug
+mp4list=five_deflations five_deflations_ws yellow_brick_road yellow_brick_road_aug yellow_brick_road_aug6
 
 $(mp4list:%=%.mp4): %.mp4: frames/%/frame0000.png
 	ffmpeg -y -framerate 25 -pattern_type glob -i 'frames/$*/frame????.png' -c:v libx264 -pix_fmt yuv420p $@
@@ -28,6 +28,10 @@ frames/yellow_brick_road/frame0000.png: yellow_brick_road.pov
 frames/yellow_brick_road_aug/frame0000.png: yellow_brick_road.pov
 	povray -D +a $< Declare=AspectWide=1 Declare=augmented=1 +W1280 +H720 +ki0 +kf200 +kfi0 +kff5000 +Oframes/yellow_brick_road_aug/frame
 	for i in `seq 5001 5025`; do cp frames/yellow_brick_road_aug/frame5000.png frames/yellow_brick_road_aug/frame$${i}.png; done
+
+frames/yellow_brick_road_aug6/frame0000.png: yellow_brick_road.pov
+	povray -D +a $< Declare=AspectWide=1 Declare=depth=6 Declare=augmented=1 +W1280 +H720 +ki0 +kf240 +kfi0 +kff6000 +Oframes/yellow_brick_road_aug6/frame
+	for i in `seq 6001 6025`; do cp frames/yellow_brick_road_aug6/frame6000.png frames/yellow_brick_road_aug6/frame$${i}.png; done
 
 #five_deflations_ws.mp4: frames/five_deflations_ws/frame0000.png
 #	ffmpeg -y -framerate 25 -pattern_type glob -i 'frames/five_deflations_ws/five_deflations????.png' -c:v libx264 -pix_fmt yuv420p $@
