--- a/povray/Makefile
+++ b/povray/Makefile
@@ -13,7 +13,7 @@ $(deflated_png_H7):einstein_H7_d%.png: einstein.pov shapes.inc subdivision.inc
 $(deflated_png_H8):einstein_H8_d%.png: einstein.pov shapes.inc subdivision.inc
 	povray +a -D $< Declare=htile=8 Declare=depth=$* +O$@
 
-mp4list=five_deflations five_deflations_ws yellow_brick_road yellow_brick_road_aug yellow_brick_road_aug6
+mp4list=five_deflations five_deflations_ws yellow_brick_road5B yellow_brick_road_aug5B yellow_brick_road_aug6
 
 $(mp4list:%=%.mp4): %.mp4: frames/%/frame0000.png
 	ffmpeg -y -framerate 25 -pattern_type glob -i 'frames/$*/frame????.png' -c:v libx264 -pix_fmt yuv420p $@
@@ -21,13 +21,13 @@ $(mp4list:%=%.mp4): %.mp4: frames/%/frame0000.png
 frames/five_deflations/frame0000.png: five_deflations.pov
 	povray -D +a five_deflations.pov Declare=AspectWide=1 +W1280 +H720 +ki0 +kf11 +kfi0 +kff2750 +Oframes/five_deflations/frame
 
-frames/yellow_brick_road/frame0000.png: yellow_brick_road.pov
-	povray -D +a $< Declare=AspectWide=1 +W1280 +H720 +ki0 +kf200 +kfi0 +kff5000 +Oframes/yellow_brick_road/frame
-	for i in `seq 5001 5025`; do cp frames/yellow_brick_road/frame5000.png frames/yellow_brick_road/frame$${i}.png; done
+frames/yellow_brick_road5B/frame0000.png: yellow_brick_road.pov
+	povray -D +a $< Declare=AspectWide=1 Declare=depth=5 Declare=htile=8 +W1280 +H720 +ki0 +kf200 +kfi0 +kff5000 +Oframes/yellow_brick_road5B/frame
+	for i in `seq 5001 5025`; do cp frames/yellow_brick_road5B/frame5000.png frames/yellow_brick_road5B/frame$${i}.png; done
 
-frames/yellow_brick_road_aug/frame0000.png: yellow_brick_road.pov
-	povray -D +a $< Declare=AspectWide=1 Declare=augmented=1 +W1280 +H720 +ki0 +kf200 +kfi0 +kff5000 +Oframes/yellow_brick_road_aug/frame
-	for i in `seq 5001 5025`; do cp frames/yellow_brick_road_aug/frame5000.png frames/yellow_brick_road_aug/frame$${i}.png; done
+frames/yellow_brick_road_aug5B/frame0000.png: yellow_brick_road.pov
+	povray -D +a $< Declare=AspectWide=1 Declare=augmented=1 Declare=depth=5 Declare=htile=8 +W1280 +H720 +ki0 +kf200 +kfi0 +kff5000 +Oframes/yellow_brick_road_aug5B/frame
+	for i in `seq 5001 5025`; do cp frames/yellow_brick_road_aug5B/frame5000.png frames/yellow_brick_road_aug5B/frame$${i}.png; done
 
 frames/yellow_brick_road_aug6/frame0000.png: yellow_brick_road.pov
 	povray -D +a $< Declare=AspectWide=1 Declare=depth=6 Declare=augmented=1 +W1280 +H720 +ki0 +kf240 +kfi0 +kff6000 +Oframes/yellow_brick_road_aug6/frame
