--- a/povray/Makefile
+++ b/povray/Makefile
@@ -18,32 +18,36 @@ mp4list=five_deflations five_deflations_ws yellow_brick_road5B yellow_brick_road
 $(mp4list:%=%.mp4): %.mp4: frames/%/DONE
 	ffmpeg -y -framerate 25 -pattern_type glob -i 'frames/$*/frame????.png' -c:v libx264 -pix_fmt yuv420p $@
 
-frames/five_deflations/frame0000.png: five_deflations.pov
+frames/five_deflations/DONE: five_deflations.pov
 	povray -D +a five_deflations.pov Declare=AspectWide=1 +W1280 +H720 +ki0 +kf11 +kfi0 +kff2750 +Oframes/five_deflations/frame
+	touch frames/five_deflations/DONE
 
-frames/yellow_brick_road5B/frame0000.png: yellow_brick_road.pov
+#five_deflations_ws.mp4: frames/five_deflations_ws/frame0000.png
+#	ffmpeg -y -framerate 25 -pattern_type glob -i 'frames/five_deflations_ws/five_deflations????.png' -c:v libx264 -pix_fmt yuv420p $@
+
+frames/five_deflations_ws/DONE: five_deflations.pov
+	povray -D +a five_deflations.pov Declare=AspectWide=1 Declare=withscritta=1 +W1280 +H720 +ki0 +kf11 +kfi0 +kff2750 +Oframes/five_deflations_ws/frame
+	touch frames/five_deflations_ws/DONE
+
+frames/yellow_brick_road5B/DONE: yellow_brick_road.pov
 	povray -D +a $< Declare=AspectWide=1 Declare=depth=5 Declare=htile=8 +W1280 +H720 +ki0 +kf200 +kfi0 +kff5000 +Oframes/yellow_brick_road5B/frame
 	for i in `seq 5001 5025`; do cp frames/yellow_brick_road5B/frame5000.png frames/yellow_brick_road5B/frame$${i}.png; done
+	touch frames/yellow_brick_road5B/DONE
 
-frames/yellow_brick_road_aug5B/frame0000.png: yellow_brick_road.pov
+frames/yellow_brick_road_aug5B/DONE: yellow_brick_road.pov
 	povray -D +a $< Declare=AspectWide=1 Declare=augmented=1 Declare=depth=5 Declare=htile=8 +W1280 +H720 +ki0 +kf200 +kfi0 +kff5000 +Oframes/yellow_brick_road_aug5B/frame
 	for i in `seq 5001 5025`; do cp frames/yellow_brick_road_aug5B/frame5000.png frames/yellow_brick_road_aug5B/frame$${i}.png; done
+	touch frames/yellow_brick_road_aug5B/DONE
 
 frames/yellow_brick_road6/DONE: yellow_brick_road.pov
 	povray -D +a $< Declare=AspectWide=1 Declare=depth=6 +W1280 +H720 +ki0 +kf164 +kfi0 +kff4100 +Oframes/yellow_brick_road6/frame
 	for i in `seq 4101 4125`; do cp frames/yellow_brick_road6/frame4100.png frames/yellow_brick_road6/frame$${i}.png; done
 	touch frames/yellow_brick_road6/DONE
 
-frames/yellow_brick_road_aug6/frame0000.png: yellow_brick_road.pov
+frames/yellow_brick_road_aug6/DONE: yellow_brick_road.pov
 	povray -D +a $< Declare=AspectWide=1 Declare=depth=6 Declare=augmented=1 +W1280 +H720 +ki0 +kf164 +kfi0 +kff4100 +Oframes/yellow_brick_road_aug6/frame
 	for i in `seq 4101 4125`; do cp frames/yellow_brick_road_aug6/frame4100.png frames/yellow_brick_road_aug6/frame$${i}.png; done
 	touch frames/yellow_brick_road_aug6/DONE
-
-#five_deflations_ws.mp4: frames/five_deflations_ws/frame0000.png
-#	ffmpeg -y -framerate 25 -pattern_type glob -i 'frames/five_deflations_ws/five_deflations????.png' -c:v libx264 -pix_fmt yuv420p $@
-
-frames/five_deflations_ws/frame0000.png: five_deflations.pov frames/five_deflations_ws
-	povray -D +a five_deflations.pov Declare=AspectWide=1 Declare=withscritta=1 +W1280 +H720 +ki0 +kf11 +kfi0 +kff2750 +Oframes/five_deflations_ws/frame
 
 # comando di concatenazione, se serve:
 #	ffmpeg -f concat -safe 0 -i subdivisionlist.txt -c copy subdivision.mp4
