Makefile now creates all sets of spectre/mystic subdivisions

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -1,34 +1,66 @@
 
-depths = 0 1 2 3 4 5 6
-deflated_suf = $(depths:%=H7_%) $(depths:%=H8_%)
+depthsH78 = 0 1 2 3 4 5 6
+deflated_suf = $(depthsH78:%=H7_%) $(depthsH78:%=H8_%)
 
-deflated_png_H7 = $(depths:%=einstein_H7_d%.png)
-deflated_png_H8 = $(depths:%=einstein_H8_d%.png)
+deflated_png_H7 = $(depthsH78:%=einstein_H7_d%.png)
+deflated_png_H8 = $(depthsH78:%=einstein_H8_d%.png)
 
-all:$(deflated_png_H7) $(deflated_png_H8)
+depthsSM = 0 1 2 3 4 5 6
+deflated_png_S = $(depthsSM:%=spectre_d%.png)
+deflated_png_M = $(depthsSM:%=mystic_d%.png)
+deflatedq_png_S = $(depthsSM:%=spectreq_d%.png)
+deflatedq_png_M = $(depthsSM:%=mysticq_d%.png)
+
+allH78 = $(deflated_png_H7) $(deflated_png_H8)
+allSM = $(deflated_png_S) $(deflated_png_M) $(deflatedq_png_S) $(deflatedq_png_M)
+
+all: $(allH78) $(allSM)
+allchiral: $(allSM)
+
+#
+# png images
+#
+povoptspng = -D +a +W1024 +H768
 
 $(deflated_png_H7):einstein_H7_d%.png: einstein.pov shapes.inc subdivision.inc
-	povray +a -D $< Declare=htile=7 Declare=depth=$* +O$@
+	povray $(povoptspng) $< Declare=htile=7 Declare=depth=$* +O$@
 
 $(deflated_png_H8):einstein_H8_d%.png: einstein.pov shapes.inc subdivision.inc
-	povray +a -D $< Declare=htile=8 Declare=depth=$* +O$@
+	povray $(povoptspng) $< Declare=htile=8 Declare=depth=$* +O$@
+
+$(deflated_png_S):spectre_d%.png: spectre.pov shapes.inc spectresubdivision.inc
+	povray $(povoptspng) $< Declare=htile=1 Declare=depth=$* Declare=fig22=1 +O$@
+
+$(deflated_png_M):mystic_d%.png: spectre.pov shapes.inc spectresubdivision.inc
+	povray $(povoptspng) $< Declare=htile=2 Declare=depth=$* Declare=fig22=1 +O$@
+
+$(deflatedq_png_S):spectreq_d%.png: spectre.pov shapes.inc spectresubdivision.inc
+	povray $(povoptspng) $< Declare=htile=1 Declare=depth=$* Declare=quadrilateral=1 Declare=figA1=1 +O$@
+
+$(deflatedq_png_M):mysticq_d%.png: spectre.pov shapes.inc spectresubdivision.inc
+	povray $(povoptspng) $< Declare=htile=2 Declare=depth=$* Declare=quadrilateral=1 Declare=figA1=1 +O$@
+
+
+#
+# mp4 animations
+#
 
 mp4list=five_deflations five_deflations_ws yellow_brick_road5B yellow_brick_road_aug5B yellow_brick_road6  yellow_brick_road_aug6 
 
 $(mp4list:%=%.mp4): %.mp4: frames/%/DONE
 	ffmpeg -y -framerate 25 -pattern_type glob -i 'frames/$*/frame????.png' -c:v libx264 -pix_fmt yuv420p $@
 
-povoptions = -D +a Declare=AspectWide=1 +W1280 +H720 +ki0 +kfi0
+povoptsani = -D +a Declare=AspectWide=1 +W1280 +H720 +ki0 +kfi0
 
 frames/five_deflations/DONE: frames/%/DONE: five_deflations.pov
 #	povray -D +a $< Declare=AspectWide=1 +W1280 +H720 +ki0 +kf11 +kfi0 +kff2750 +Oframes/$*/frame
-	povray $< $(povoptions) +kf11 +kff2750 +Oframes/$*/frame
+	povray $< $(povoptsani) +kf11 +kff2750 +Oframes/$*/frame
 	for i in `seq 2751 2775`; do cp frames/$*/frame2750.png frames/$*/frame$${i}.png; done
 	touch $@
 
 frames/five_deflations_ws/DONE: frames/%/DONE: five_deflations.pov
 #	povray -D +a $< Declare=AspectWide=1 Declare=withscritta=1 +W1280 +H720 +ki0 +kf11 +kfi0 +kff2750 +Oframes/$*/frame
-	povray $< $(povoptions) Declare=withscritta=1 +kf11 +kff2750 +Oframes/$*/frame
+	povray $< $(povoptsani) Declare=withscritta=1 +kf11 +kff2750 +Oframes/$*/frame
 	for i in `seq 2751 2775`; do cp frames/$*/frame2750.png frames/$*/frame$${i}.png; done
 	touch $@
 
@@ -38,7 +70,7 @@ frames/five_deflations_ws/DONE: frames/%/DONE: five_deflations.pov
 
 frames/yellow_brick_road5B/DONE: frames/%/DONE: yellow_brick_road.pov
 #	povray -D +a $< Declare=AspectWide=1 Declare=depth=5 Declare=htile=8 +W1280 +H720 +ki0 +kf200 +kfi0 +kff5000 +Oframes/$*/frame
-	povray $< $(povoptions) Declare=depth=5 Declare=htile=8 +kf200 +kff5000 +Oframes/$*/frame
+	povray $< $(povoptsani) Declare=depth=5 Declare=htile=8 +kf200 +kff5000 +Oframes/$*/frame
 	for i in `seq 5001 5025`; do cp frames/$*/frame5000.png frames/$*/frame$${i}.png; done
 	touch $@
 
@@ -48,7 +80,7 @@ frames/yellow_brick_road5B/DONE: frames/%/DONE: yellow_brick_road.pov
 #	touch frames/yellow_brick_road5B/DONE
 
 frames/yellow_brick_road_aug5B/DONE: frames/%/DONE: yellow_brick_road.pov
-	povray $< $(povoptions) Declare=augmented=1 Declare=depth=5 Declare=htile=8 +kf200 +kff5000 +Oframes/$*/frame
+	povray $< $(povoptsani) Declare=augmented=1 Declare=depth=5 Declare=htile=8 +kf200 +kff5000 +Oframes/$*/frame
 	for i in `seq 5001 5025`; do cp frames/$*/frame5000.png frames/$*/frame$${i}.png; done
 	touch $@
 
@@ -58,7 +90,7 @@ frames/yellow_brick_road_aug5B/DONE: frames/%/DONE: yellow_brick_road.pov
 #	touch frames/yellow_brick_road_aug5B/DONE
 
 frames/yellow_brick_road6/DONE: frames/%/DONE: yellow_brick_road.pov
-	povray $< $(povoptions) Declare=depth=6 +kf164 +kff4100 +Oframes/$*/frame
+	povray $< $(povoptsani) Declare=depth=6 +kf164 +kff4100 +Oframes/$*/frame
 	for i in `seq 4101 4125`; do cp frames/$*/frame4100.png frames/$*/frame$${i}.png; done
 	touch $@
 
@@ -68,7 +100,7 @@ frames/yellow_brick_road6/DONE: frames/%/DONE: yellow_brick_road.pov
 #	touch frames/yellow_brick_road6/DONE
 
 frames/yellow_brick_road_aug6/DONE: frames/%/DONE: yellow_brick_road.pov
-	povray $< $(povoptions) Declare=depth=6 Declare=augmented=1 +kf164 +kff4100 +Oframes/$*/frame
+	povray $< $(povoptsani) Declare=depth=6 Declare=augmented=1 +kf164 +kff4100 +Oframes/$*/frame
 	for i in `seq 4101 4125`; do cp frames/$*/frame4100.png frames/$*/frame$${i}.png; done
 	touch $@
 
