--- a/povray/Makefile
+++ b/povray/Makefile
@@ -11,6 +11,9 @@ deflated_png_M = $(depthsSM:%=mystic_d%.png)
 deflatedq_png_S = $(depthsSM:%=spectreq_d%.png)
 deflatedq_png_M = $(depthsSM:%=mysticq_d%.png)
 
+yellowtopviews = yellow_brick_road_topview01 yellow_brick_road_topview023
+paths=01 023
+
 allH78 = $(deflated_png_H7) $(deflated_png_H8)
 allSM = $(deflated_png_S) $(deflated_png_M) $(deflatedq_png_S) $(deflatedq_png_M)
 
@@ -21,6 +24,12 @@ allchiral: $(allSM)
 # png images
 #
 povoptspng = -D +a +W1024 +H768
+
+yellow_brick_road_topview01.png: yellow_brick_road.pov
+	povray $(povoptspng) $< Declare=depth=4 Declare=topview=2 +O$@
+
+yellow_brick_road_topview023.png: yellow_brick_road.pov
+	povray $(povoptspng) $< Declare=depth=4 Declare=topview=3 +O$@
 
 $(deflated_png_H7):einstein_H7_d%.png: einstein.pov shapes.inc subdivision.inc
 	povray $(povoptspng) $< Declare=htile=7 Declare=depth=$* +O$@
