Fix problem with the top of the 3 cluster (with buildtheback=1). Get depth=0 working with topview=1

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -11,7 +11,7 @@ deflated_png_M = $(depthsSM:%=mystic_d%.png)
 deflatedq_png_S = $(depthsSM:%=spectreq_d%.png)
 deflatedq_png_M = $(depthsSM:%=mysticq_d%.png)
 
-yellowtopviews = yellow_brick_road_topview01 yellow_brick_road_topview023
+yellowtopviews = yellow_brick_road_topview01 yellow_brick_road_topview023 yellow_brick_road_3clusters
 paths=01 023
 
 allH78 = $(deflated_png_H7) $(deflated_png_H8)
@@ -30,6 +30,9 @@ yellow_brick_road_topview01.png: yellow_brick_road.pov
 
 yellow_brick_road_topview023.png: yellow_brick_road.pov
 	povray $(povoptspng) $< Declare=depth=4 Declare=topview=3 +O$@
+
+yellow_brick_road_3clusters.png: yellow_brick_road.pov
+	povray $(povoptspng) $< Declare=depth=0 Declare=topview=1 Declare=buildtheback=1 Declare=zoom=1.8 +O$@
 
 $(deflated_png_H7):einstein_H7_d%.png: einstein.pov shapes.inc subdivision.inc
 	povray $(povoptspng) $< Declare=htile=7 Declare=depth=$* +O$@
