--- a/povray/Makefile
+++ b/povray/Makefile
@@ -11,9 +11,14 @@ deflated_png_M = $(depthsSM:%=mystic_d%.png)
 deflatedq_png_S = $(depthsSM:%=spectreq_d%.png)
 deflatedq_png_M = $(depthsSM:%=mysticq_d%.png)
 
-hatsignatures="[0] [2] [6] [602] [026] [260] [1]"
+hatsignatures=[0] [2] [6] [602] [026] [260] [1]
 hatsigpngd6=${hatsignatures:%=hatconwaysig%_d6.png}
-hatsigpngd4=${hatsignatures:%=hatconwaysig%_d4.png}
+hatsigpngd6z=${hatsignatures:%=hatconwaysig%_d6z.png}
+hatsigpngd7z=${hatsignatures:%=hatconwaysig%_d7z.png}
+
+hatsigsd6: $(hatsigpngd6)
+hatsigsd6z: $(hatsigpngd6z)
+hatsigsd7z: $(hatsigpngd7z)
 
 yellowtopviews = yellow_brick_road_topview01 yellow_brick_road_topview023 yellow_brick_road_3clusters
 paths=01 023
@@ -28,8 +33,16 @@ allchiral: $(allSM)
 # png images
 #
 
-
 povoptspng = -D +a +W1024 +H768
+
+$(hatsigpngd6):hatconwaysig%_d6.png:hatconwaysig.pov hatsig2povopt.sh
+	./hatsig2povopt.sh -q $* povray Declare=depth=6 $(povoptspng) +O- >$@
+
+$(hatsigpngd6z):hatconwaysig%_d6z.png:hatconwaysig.pov hatsig2povopt.sh
+	./hatsig2povopt.sh -q $* povray Declare=depth=6 Declare=zoomout=4 $(povoptspng) +O- >$@
+
+$(hatsigpngd7z):hatconwaysig%_d7z.png:hatconwaysig.pov hatsig2povopt.sh
+	./hatsig2povopt.sh -q $* povray Declare=depth=7 Declare=zoomout=4 $(povoptspng) +O- >$@
 
 yellow_brick_road_topview01.png: yellow_brick_road.pov
 	povray $(povoptspng) $< Declare=depth=4 Declare=topview=2 Declare=buildtheback=1 +O$@
