Add orientation in subdivision of a super-H8

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -36,7 +36,7 @@ allchiral: $(allSM)
 povoptspng = -D +a +W1024 +H768
 
 hatnumbers.png: einstein.pov
-	povray -D $< Declare=numbers=1 +O$@
+	povray -D $< Declare=numbers=1 Declare=arrow=1 +O$@
 
 $(hatsigpngd6):hatconwaysig%_d6.png:hatconwaysig.pov hatsig2povopt.sh
 	./hatsig2povopt.sh -q $* povray Declare=depth=6 $(povoptspng) +O- >$@
